[gd_scene load_steps=32 format=3 uid="uid://8p06dcxfha7v"]

[ext_resource type="Script" uid="uid://unjmpix74y7x" path="res://SCENES/MAIN/topmenu_file.gd" id="1_2rc5h"]
[ext_resource type="Script" uid="uid://dn2fpogyaibb8" path="res://SCENES/MAIN/main.gd" id="1_rl44a"]
[ext_resource type="Script" uid="uid://cymsb74jdg0i3" path="res://SCENES/MAIN/session_tabs.gd" id="2_86rm5"]
[ext_resource type="Script" uid="uid://lbfev34e36ih" path="res://SCENES/MAIN/topmenu_help.gd" id="2_pvowg"]
[ext_resource type="PackedScene" uid="uid://bqh1wnv1ogdi4" path="res://SCENES/TABS/SHARED/tab_session.tscn" id="3_kwuap"]
[ext_resource type="Script" uid="uid://dauvjjf6qpkix" path="res://SCENES/MAIN/topmenu_edit.gd" id="3_lymwu"]
[ext_resource type="Script" uid="uid://c7tyaxpwstmog" path="res://SCENES/MAIN/bbcode_links.gd" id="5_jbgtt"]
[ext_resource type="Script" uid="uid://dqb5e70xt55vb" path="res://SCENES/MAIN/status.gd" id="6_x8l4e"]
[ext_resource type="Script" uid="uid://br715q4nlkbn6" path="res://SCENES/MAIN/status_color.gd" id="8_5nt50"]
[ext_resource type="Script" uid="uid://capgpsp6n0cqf" path="res://SCENES/MAIN/PREFERENCES/preferences.gd" id="9_amh60"]
[ext_resource type="Script" uid="uid://cyracgls2ywa8" path="res://SCENES/MAIN/about.gd" id="9_jufyb"]
[ext_resource type="Script" uid="uid://bfa0ufwbvd0c4" path="res://SCENES/MAIN/PREFERENCES/box_thickness.gd" id="9_t7qug"]
[ext_resource type="Script" uid="uid://baga57toxm66d" path="res://SCENES/MAIN/PREFERENCES/custom_color_bg_a.gd" id="10_32rfu"]
[ext_resource type="Script" uid="uid://db2es7eqwfn7m" path="res://SCENES/MAIN/PREFERENCES/cell_origin_cross.gd" id="10_ed0ih"]
[ext_resource type="Script" uid="uid://df8jtqlmna7d1" path="res://SCENES/MAIN/PREFERENCES/cell_onion_skin_color.gd" id="10_p1185"]
[ext_resource type="Script" uid="uid://nredvk25c8ab" path="res://SCENES/MAIN/PREFERENCES/box_color_unknown.gd" id="11_5e06x"]
[ext_resource type="Script" uid="uid://cqsxbpqdjbaky" path="res://SCENES/MAIN/PREFERENCES/custom_color_bg_b.gd" id="11_36hta"]
[ext_resource type="Script" uid="uid://j3v3fql1tauv" path="res://SCENES/MAIN/PREFERENCES/box_color_hurtbox.gd" id="12_3dcda"]
[ext_resource type="Script" uid="uid://c6ha17xwoun03" path="res://SCENES/MAIN/PREFERENCES/box_color_hitbox.gd" id="13_dgg1r"]
[ext_resource type="Script" uid="uid://b54j22ehk4xxt" path="res://SCENES/MAIN/PREFERENCES/custom_color_status.gd" id="13_pomsy"]
[ext_resource type="Script" uid="uid://busxp4i6h5sns" path="res://SCENES/MAIN/PREFERENCES/box_color_spawn.gd" id="15_4p7l4"]
[ext_resource type="Script" uid="uid://cn14e0ycou72h" path="res://SCENES/MAIN/PREFERENCES/box_color_region_back.gd" id="15_ndrkd"]
[ext_resource type="Script" uid="uid://bfcmvtcx2kaad" path="res://SCENES/MAIN/PREFERENCES/box_color_region_front.gd" id="16_4ql6k"]
[ext_resource type="Script" uid="uid://4cyjm7au0vdi" path="res://SCENES/MAIN/PREFERENCES/sprite_color_bounds.gd" id="16_n6nme"]
[ext_resource type="Script" uid="uid://cov7kyoxcnuf2" path="res://SCENES/MAIN/PREFERENCES/box_color_collision_extension.gd" id="17_jr1md"]
[ext_resource type="Script" uid="uid://c1ax6oebrub2c" path="res://SCENES/MAIN/PREFERENCES/cell_guide_color.gd" id="17_nxxtx"]
[ext_resource type="Script" uid="uid://ch0kfhlvhxbdh" path="res://SCENES/MAIN/PREFERENCES/misc_max_undo.gd" id="19_w7ci1"]
[ext_resource type="Script" uid="uid://dg5ke7hjoabse" path="res://SCENES/MAIN/PREFERENCES/misc_reopen.gd" id="20_560p1"]
[ext_resource type="Script" uid="uid://cg2m3kk5iqejb" path="res://SCENES/MAIN/save_lock.gd" id="28_j0856"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6eya"]
bg_color = Color(0.0687983, 0.0687983, 0.0687982, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3catb"]
bg_color = Color(0, 0, 0, 1)

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rl44a")

[node name="content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="top_bar" type="PanelContainer" parent="content"]
layout_mode = 2

[node name="menu_bar" type="MenuBar" parent="content/top_bar"]
layout_mode = 2
prefer_global_menu = false

[node name="File" type="PopupMenu" parent="content/top_bar/menu_bar" node_paths=PackedStringArray("load_dialog_dir", "load_dialog_bin", "save_as_dialog")]
size = Vector2i(100, 122)
script = ExtResource("1_2rc5h")
load_dialog_dir = NodePath("load_dialog_dir")
load_dialog_bin = NodePath("load_dialog_bin")
save_as_dialog = NodePath("save_as_dialog")

[node name="load_dialog_dir" type="FileDialog" parent="content/top_bar/menu_bar/File"]
title = "Open a Directory"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="load_dialog_bin" type="FileDialog" parent="content/top_bar/menu_bar/File"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.bin;Binary files")
use_native_dialog = true

[node name="save_as_dialog" type="FileDialog" parent="content/top_bar/menu_bar/File"]
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Save"
access = 2
use_native_dialog = true

[node name="Edit" type="PopupMenu" parent="content/top_bar/menu_bar"]
size = Vector2i(149, 109)
script = ExtResource("3_lymwu")

[node name="Help" type="PopupMenu" parent="content/top_bar/menu_bar" node_paths=PackedStringArray("about_dialog")]
auto_translate_mode = 1
size = Vector2i(115, 100)
item_count = 1
item_0/text = "About"
item_0/id = 0
script = ExtResource("2_pvowg")
about_dialog = NodePath("../../../../about")

[node name="sessions" type="TabContainer" parent="content" node_paths=PackedStringArray("load_dialog_dir", "load_dialog_bin", "save_as_dialog")]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_86rm5")
load_dialog_dir = NodePath("../top_bar/menu_bar/File/load_dialog_dir")
load_dialog_bin = NodePath("../top_bar/menu_bar/File/load_dialog_bin")
save_as_dialog = NodePath("../top_bar/menu_bar/File/save_as_dialog")
character_scene = ExtResource("3_kwuap")

[node name="status" type="Label" parent="content"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Ready."
vertical_alignment = 1
script = ExtResource("6_x8l4e")

[node name="color" type="ColorRect" parent="content/status"]
show_behind_parent = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 1)
script = ExtResource("8_5nt50")

[node name="about" type="Panel" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(650, 380)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -160.0
offset_right = 300.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_i6eya")
script = ExtResource("9_jufyb")

[node name="content" type="VBoxContainer" parent="about"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="details" type="HBoxContainer" parent="about/content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="acknowledgments" type="RichTextLabel" parent="about/content/details"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center]ACKNOWLEDGMENTS

[b]Ryn[/b]
[url={https://github.com/wistfulhopes}]Github[/url] / [url={https://twitter.com/wistfulhopes}]Twitter[/url]
- Character BIN parser
- +R sprite decoder

[b]lovenus[/b]
[url={https://github.com/MoonSquaredd}]Github[/url]
- Parsers for various other resource files
- Additional info and research into +R

[b]Chloe (@chloegoaty)[/b]
- Testing, various improvement suggestions"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
script = ExtResource("5_jbgtt")

[node name="v_sep" type="VSeparator" parent="about/content/details"]
layout_mode = 2

[node name="info" type="RichTextLabel" parent="about/content/details"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center]GEAR STUDIO
0.4.0 (Oct 30th 2024)

by ALT_OhDude ([url={https://github.com/saltern}]Github[/url])."
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
script = ExtResource("5_jbgtt")

[node name="h_sep" type="HSeparator" parent="about/content"]
layout_mode = 2

[node name="close_button" type="CenterContainer" parent="about/content"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="button" type="Button" parent="about/content/close_button"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[node name="preferences" type="Window" parent="." node_paths=PackedStringArray("save_button")]
title = "Preferences"
initial_position = 2
size = Vector2i(400, 750)
visible = false
exclusive = true
min_size = Vector2i(400, 200)
max_size = Vector2i(400, 750)
script = ExtResource("9_amh60")
save_button = NodePath("background/margin/content/save")

[node name="background" type="PanelContainer" parent="preferences"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3catb")

[node name="margin" type="MarginContainer" parent="preferences/background"]
layout_mode = 2

[node name="content" type="VBoxContainer" parent="preferences/background/margin"]
layout_mode = 2

[node name="scroll" type="ScrollContainer" parent="preferences/background/margin/content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="settings_margin" type="MarginContainer" parent="preferences/background/margin/content/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="settings" type="VBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="custom" type="VBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings"]
layout_mode = 2

[node name="title" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom/title"]
layout_mode = 2
text = "General"

[node name="separator" type="HSeparator" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom/title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="bg_a" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom/bg_a"]
layout_mode = 2
size_flags_horizontal = 3
text = "Background grid color 1"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom/bg_a"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("10_32rfu")

[node name="bg_b" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom/bg_b"]
layout_mode = 2
size_flags_horizontal = 3
text = "Background grid color 2"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom/bg_b"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11_36hta")

[node name="status" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom/status"]
layout_mode = 2
size_flags_horizontal = 3
text = "Status bar color"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/custom/status"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("13_pomsy")

[node name="cells" type="VBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings"]
layout_mode = 2

[node name="title" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells/title"]
layout_mode = 2
text = "Cells"

[node name="separator" type="HSeparator" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells/title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="origin" type="CheckButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Draw origin cross"
script = ExtResource("10_ed0ih")

[node name="onion" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells/onion"]
layout_mode = 2
size_flags_horizontal = 3
text = "Onion skin color"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells/onion"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("10_p1185")

[node name="guide" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells/guide"]
layout_mode = 2
size_flags_horizontal = 3
text = "Guide color"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/cells/guide"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("17_nxxtx")

[node name="boxes" type="VBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings"]
layout_mode = 2

[node name="title" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/title"]
layout_mode = 2
text = "Boxes"

[node name="separator" type="HSeparator" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="thickness" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/thickness"]
layout_mode = 2
size_flags_horizontal = 3
text = "Edge thickness"
text_overrun_behavior = 3

[node name="value" type="SpinBox" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/thickness"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 5.0
value = 1.0
script = ExtResource("9_t7qug")

[node name="color_unknown" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_unknown"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color (unknown)"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_unknown"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11_5e06x")

[node name="color_hurtbox" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_hurtbox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color (hurtbox)"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_hurtbox"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("12_3dcda")

[node name="color_hitbox" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_hitbox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color (hitbox)"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_hitbox"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("13_dgg1r")

[node name="color_region_b" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_region_b"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color (region, back)"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_region_b"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("15_ndrkd")

[node name="color_region_f" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_region_f"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color (region, front)"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_region_f"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("16_4ql6k")

[node name="color_collision_extend" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_collision_extend"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color (collision extension)"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_collision_extend"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("17_jr1md")

[node name="color_spawn" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_spawn"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color (effect spawn point)"
text_overrun_behavior = 3

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/boxes/color_spawn"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("15_4p7l4")

[node name="sprites" type="VBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings"]
layout_mode = 2

[node name="title" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/sprites"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/sprites/title"]
layout_mode = 2
text = "Sprites"

[node name="separator" type="HSeparator" parent="preferences/background/margin/content/scroll/settings_margin/settings/sprites/title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="color_bounds" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/sprites"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/sprites/color_bounds"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color (bounds)"

[node name="color" type="ColorPickerButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/sprites/color_bounds"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("16_n6nme")

[node name="misc" type="VBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings"]
layout_mode = 2

[node name="title" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/misc"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/misc/title"]
layout_mode = 2
text = "Miscellaneous"

[node name="separator" type="HSeparator" parent="preferences/background/margin/content/scroll/settings_margin/settings/misc/title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="max_undo" type="HBoxContainer" parent="preferences/background/margin/content/scroll/settings_margin/settings/misc"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="preferences/background/margin/content/scroll/settings_margin/settings/misc/max_undo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max undo steps"
text_overrun_behavior = 3

[node name="value" type="SpinBox" parent="preferences/background/margin/content/scroll/settings_margin/settings/misc/max_undo"]
layout_mode = 2
max_value = 200.0
script = ExtResource("19_w7ci1")

[node name="reopen" type="CheckButton" parent="preferences/background/margin/content/scroll/settings_margin/settings/misc"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
button_pressed = true
text = "Allow reopening same folder"
script = ExtResource("20_560p1")

[node name="save" type="Button" parent="preferences/background/margin/content"]
layout_mode = 2
text = "Save preferences"

[node name="save_lock" type="Window" parent="."]
title = "Saving..."
initial_position = 2
size = Vector2i(250, 120)
visible = false
transient = true
exclusive = true
unresizable = true
force_native = true
script = ExtResource("28_j0856")

[node name="content" type="VBoxContainer" parent="save_lock"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -22.0
offset_right = 44.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="save_lock/content"]
layout_mode = 2
text = "Please wait..."
horizontal_alignment = 1

[node name="step" type="Label" parent="save_lock/content"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="sub" type="Label" parent="save_lock/content"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="meta_clicked" from="about/content/details/acknowledgments" to="about/content/details/acknowledgments" method="link_clicked"]
[connection signal="meta_clicked" from="about/content/details/info" to="about/content/details/info" method="link_clicked"]
[connection signal="pressed" from="about/content/close_button/button" to="about" method="hide"]
